# cntr-aisle-services

./: .dockerignore  .env.example  .gitignore  Dockerfile.base  Dockerfile.data  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/base/: devcontainer.json
.devcontainer/data/: devcontainer.json
.github/workflows/: ci.yml  ingest.yml
docs/: ingestion-runbook.md
scripts/: setup_venv.sh
services/ingestion/: README.md
services/ingestion/src/: __init__.py  __main__.py  bills_repository.py  cli.py  filtering.py  ingestion.py  legiscan_client.py  parser.py
shared/: __init__.py
shared/database/: supabase_client.py
shared/models/: bill.py
shared/queue/: rq_client.py
shared/utils/: config.py
supabase/: config.toml
tests/services/ingestion/: README.md  conftest.py  test_bills_repository.py  test_cli.py  test_filtering.py  test_ingestion.py  test_ingestion_full_integration.py  test_ingestion_integration.py  test_legiscan_client.py  test_legiscan_client_integration.py  test_parser.py
tests/shared/: test_config.py  test_database.py
